[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agethos"
version = "0.1.0"
description = "A brain for AI agents — persona, memory, reflection, and planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["agethos[openai,anthropic]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
